--- a/src/locales/ar-XA.json
+++ b/src/locales/ar-XA.json
@@ -33,5 +33,7 @@
 	"join": "انضم",
 	"leave": "غادر",
 	"joined": "{name} انضم إلى المحادثة.",
-	"leaved": "{name} غادر المحادثة."
+	"leaved": "{name} غادر المحادثة.",
+	"translate": "ترجمة",
+	"chat": "دردشة"
 }
