--- a/src/locales/bg-BG.json
+++ b/src/locales/bg-BG.json
@@ -33,5 +33,7 @@
 	"join": "Присъединете се",
 	"leave": "Напусни",
 	"joined": "{name} се присъедини към разговора.",
-	"leaved": "{name} напусна разговора."
+	"leaved": "{name} напусна разговора.",
+	"translate": "Преведи",
+	"chat": "Чат"
 }
