--- a/src/locales/bn-IN.json
+++ b/src/locales/bn-IN.json
@@ -33,5 +33,7 @@
 	"join": "যোগ দিন",
 	"leave": "ছেড়ে দিন",
 	"joined": "{name} আলাপে যোগ দিয়েছেন।",
-	"leaved": "{name} আলাপ ছেড়ে গেছেন।"
+	"leaved": "{name} আলাপ ছেড়ে গেছেন।",
+	"translate": "অনুবাদ করুন",
+	"chat": "চ্যাট"
 }
