--- a/src/locales/el-GR.json
+++ b/src/locales/el-GR.json
@@ -33,5 +33,7 @@
 	"join": "Εγγραφή",
 	"leave": "φεύγω",
 	"joined": "Ο {name} συμμετείχε στη συνομιλία.",
-	"leaved": "Ο {name} αποχώρησε από τη συνομιλία."
+	"leaved": "Ο {name} αποχώρησε από τη συνομιλία.",
+	"translate": "Μετάφραση",
+	"chat": "Συνομιλία"
 }
