--- a/src/locales/fil-PH.json
+++ b/src/locales/fil-PH.json
@@ -33,5 +33,7 @@
 	"join": "Sumali",
 	"leave": "Umalis",
 	"joined": "Sumali si {name} sa usapan.",
-	"leaved": "Umalis si {name} sa usapan."
+	"leaved": "Umalis si {name} sa usapan.",
+	"translate": "Isalin",
+	"chat": "Usapan"
 }
