--- a/src/locales/gu-IN.json
+++ b/src/locales/gu-IN.json
@@ -33,5 +33,7 @@
 	"join": "જોડાઓ",
 	"leave": "છોડો",
 	"joined": "{name} વાર્તાલાપમાં જોડાયા.",
-	"leaved": "{name} એ વાતચીત છોડી દીધી."
+	"leaved": "{name} એ વાતચીત છોડી દીધી.",
+	"translate": "અનુવાદ કરો",
+	"chat": "ચેટ"
 }
