--- a/src/locales/hi-IN.json
+++ b/src/locales/hi-IN.json
@@ -33,5 +33,7 @@
 	"join": "जुड़ें",
 	"leave": "छोड़ें",
 	"joined": "{name} वार्तालाप में शामिल हुए।",
-	"leaved": "{name} वार्तालाप छोड़ गए।"
+	"leaved": "{name} वार्तालाप छोड़ गए।",
+	"translate": "अनुवाद करें",
+	"chat": "चैट"
 }
