--- a/src/locales/kn-IN.json
+++ b/src/locales/kn-IN.json
@@ -33,5 +33,7 @@
 	"join": "ಸೇರಿಸು",
 	"leave": "ಬಿಡಿ",
 	"joined": "{name} ಸಂಭಾಷಣೆಗೆ ಸೇರಿದ್ದಾರೆ.",
-	"leaved": "{name} ಅವರು ಸಂಭಾಷಣೆಯನ್ನು ತೊರೆದಿದ್ದಾರೆ."
+	"leaved": "{name} ಅವರು ಸಂಭಾಷಣೆಯನ್ನು ತೊರೆದಿದ್ದಾರೆ.",
+	"translate": "ಅನುವಾದಿಸಿ",
+	"chat": "ಸಂಭಾಷಣೆ"
 }
