--- a/src/locales/ml-IN.json
+++ b/src/locales/ml-IN.json
@@ -33,5 +33,7 @@
 	"join": "ചേരുക",
 	"leave": "വിടുക",
 	"joined": "{name} സംഭാഷണത്തിൽ ചേർന്നു.",
-	"leaved": "{name} സംഭാഷണം വിട്ടു."
+	"leaved": "{name} സംഭാഷണം വിട്ടു.",
+	"translate": "പരിഭാഷ ചെയ്യുക",
+	"chat": "സംസാരം"
 }
