--- a/src/locales/mr-IN.json
+++ b/src/locales/mr-IN.json
@@ -33,5 +33,7 @@
 	"join": "सामील व्हा",
 	"leave": "सोडा",
 	"joined": "{name} संभाषणात सामील झाले.",
-	"leaved": "{name} ने संभाषण सोडले."
+	"leaved": "{name} ने संभाषण सोडले.",
+	"translate": "भाषांतर करा",
+	"chat": "चॅट"
 }
