--- a/src/locales/pa-IN.json
+++ b/src/locales/pa-IN.json
@@ -33,5 +33,7 @@
 	"join": "ਸ਼ਾਮਲ ਹੋਵੋ",
 	"leave": "ਛੱਡੋ",
 	"joined": "{name} ਗੱਲਬਾਤ ਵਿੱਚ ਸ਼ਾਮਲ ਹੋਇਆ।",
-	"leaved": "{name} ਨੇ ਗੱਲਬਾਤ ਛੱਡ ਦਿੱਤੀ।"
+	"leaved": "{name} ਨੇ ਗੱਲਬਾਤ ਛੱਡ ਦਿੱਤੀ।",
+	"translate": "ਅਨੁਵਾਦ ਕਰੋ",
+	"chat": "ਚੈੱਟ"
 }
