--- a/src/locales/ru-RU.json
+++ b/src/locales/ru-RU.json
@@ -33,5 +33,7 @@
 	"join": "Присоединиться",
 	"leave": "Покинуть",
 	"joined": "{name} присоединился к разговору.",
-	"leaved": "{name} покинул разговор."
+	"leaved": "{name} покинул разговор.",
+	"translate": "Перевести",
+	"chat": "Чат"
 }
