--- a/src/locales/sr-RS.json
+++ b/src/locales/sr-RS.json
@@ -33,5 +33,7 @@
 	"join": "Придружи се",
 	"leave": "Остави",
 	"joined": "{name} се придружио разговору.",
-	"leaved": "{name} је напустио разговор."
+	"leaved": "{name} је напустио разговор.",
+	"translate": "Преведи",
+	"chat": "Чет"
 }
