--- a/src/locales/ta-IN.json
+++ b/src/locales/ta-IN.json
@@ -33,5 +33,7 @@
 	"join": "சேர்",
 	"leave": "விடு",
 	"joined": "{name} உரையாடலில் சேர்ந்தார்.",
-	"leaved": "{name} உரையாடலை விட்டு வெளியேறினார்."
+	"leaved": "{name} உரையாடலை விட்டு வெளியேறினார்.",
+	"translate": "மொழிபெயர்",
+	"chat": "உரையாடல்"
 }
