--- a/src/locales/te-IN.json
+++ b/src/locales/te-IN.json
@@ -33,5 +33,7 @@
 	"join": "చేరండి",
 	"leave": "వదిలించు",
 	"joined": "{name} సంభాషణలో చేరారు.",
-	"leaved": "{name} సంభాషణ నుండి నిష్క్రమించారు."
+	"leaved": "{name} సంభాషణ నుండి నిష్క్రమించారు.",
+	"translate": "అనువదించు",
+	"chat": "చాట్"
 }
