--- a/src/locales/th-TH.json
+++ b/src/locales/th-TH.json
@@ -33,5 +33,7 @@
 	"join": "เข้าร่วม",
 	"leave": "ออก",
 	"joined": "{name} เข้าร่วมในการสนทนา",
-	"leaved": "{name} ออกจากการสนทนา"
+	"leaved": "{name} ออกจากการสนทนา",
+	"translate": "แปล",
+	"chat": "แชท"
 }
