--- a/src/locales/uk-UA.json
+++ b/src/locales/uk-UA.json
@@ -33,5 +33,7 @@
 	"join": "Приєднатися",
 	"leave": "Залишити",
 	"joined": "{name} приєднався до бесіди.",
-	"leaved": "{name} залишив бесіду."
+	"leaved": "{name} залишив бесіду.",
+	"translate": "Перекласти",
+	"chat": "Чат"
 }
