--- a/src/locales/da-DK.json
+++ b/src/locales/da-DK.json
@@ -33,5 +33,7 @@
 	"join": "Deltag",
 	"leave": "Forlad",
 	"joined": "{name} deltog i samtalen.",
-	"leaved": "{name} forlod samtalen."
+	"leaved": "{name} forlod samtalen.",
+	"translate": "Oversæt",
+	"chat": "Chat"
 }
