--- a/src/locales/fr-FR.json
+++ b/src/locales/fr-FR.json
@@ -33,5 +33,7 @@
 	"join": "Rejoindre",
 	"leave": "Quitter",
 	"joined": "{name} a rejoint la conversation.",
-	"leaved": "{name} a quitté la conversation."
+	"leaved": "{name} a quitté la conversation.",
+	"translate": "Traduire",
+	"chat": "Chat"
 }
