--- a/src/locales/it-IT.json
+++ b/src/locales/it-IT.json
@@ -33,5 +33,7 @@
 	"join": "Unisciti",
 	"leave": "Lascia",
 	"joined": "{name} si è unito alla conversazione.",
-	"leaved": "{name} ha lasciato la conversazione."
+	"leaved": "{name} ha lasciato la conversazione.",
+	"translate": "Traduci",
+	"chat": "Chat"
 }
