--- a/src/locales/km-KH.json
+++ b/src/locales/km-KH.json
@@ -33,5 +33,7 @@
 	"join": "ចូលរួម",
 	"leave": "ចាកចេញ",
 	"joined": "{name} បានចូលរួមក្នុងការពិភាក្សា។",
-	"leaved": "{name} បានចាកចេញពីការពិភាក្សា។"
+	"leaved": "{name} បានចាកចេញពីការពិភាក្សា។",
+	"translate": "បកប្រែ",
+	"chat": "ជជែក​កម្ម"
 }
