--- a/src/locales/nb-NO.json
+++ b/src/locales/nb-NO.json
@@ -33,5 +33,7 @@
 	"join": "Bli med",
 	"leave": "Forlat",
 	"joined": "{name} ble med i samtalen.",
-	"leaved": "{name} forlot samtalen."
+	"leaved": "{name} forlot samtalen.",
+	"translate": "Oversett",
+	"chat": "Chat"
 }
