Show header menu #562 fix typo

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -34,6 +34,6 @@
 	"leave": "Leave",
 	"joined": "{name} joined the conversation.",
 	"leaved": "{name} leaved the conversation.",
-	"translate": "Transalte",
+	"translate": "Translate",
 	"chat": "Chat"
 }
