Chat: Localize room stuff #753 add translate

--- a/src/locales/af-ZA.json
+++ b/src/locales/af-ZA.json
@@ -35,5 +35,7 @@
 	"joined": "{name} het by die gesprek aangesluit.",
 	"leaved": "{name} het die gesprek verlaat.",
 	"translate": "Vertaal",
-	"chat": "klets"
+	"chat": "Klets",
+	"room": "Kamer",
+	"new_room": "Nuwe kamer"
 }
