--- a/src/locales/ar-XA.json
+++ b/src/locales/ar-XA.json
@@ -35,5 +35,7 @@
 	"joined": "{name} انضم إلى المحادثة.",
 	"leaved": "{name} غادر المحادثة.",
 	"translate": "ترجمة",
-	"chat": "دردشة"
+	"chat": "دردشة",
+	"room": "غرفة جديدة",
+	"new_room": "الغرفة"
 }
