--- a/src/locales/bg-BG.json
+++ b/src/locales/bg-BG.json
@@ -35,5 +35,7 @@
 	"joined": "{name} се присъедини към разговора.",
 	"leaved": "{name} напусна разговора.",
 	"translate": "Преведи",
-	"chat": "Чат"
+	"chat": "Чат",
+	"room": "Стая",
+	"new_room": "Нова стая"
 }
