--- a/src/locales/bn-IN.json
+++ b/src/locales/bn-IN.json
@@ -35,5 +35,7 @@
 	"joined": "{name} আলাপে যোগ দিয়েছেন।",
 	"leaved": "{name} আলাপ ছেড়ে গেছেন।",
 	"translate": "অনুবাদ করুন",
-	"chat": "চ্যাট"
+	"chat": "চ্যাট",
+	"room": "রুম",
+	"new_room": "নতুন রুম"
 }
