--- a/src/locales/el-GR.json
+++ b/src/locales/el-GR.json
@@ -35,5 +35,7 @@
 	"joined": "Ο {name} συμμετείχε στη συνομιλία.",
 	"leaved": "Ο {name} αποχώρησε από τη συνομιλία.",
 	"translate": "Μετάφραση",
-	"chat": "Συνομιλία"
+	"chat": "Συνομιλία",
+	"room": "Δωμάτιο",
+	"new_room": "Νέο δωμάτιο"
 }
