--- a/src/locales/gu-IN.json
+++ b/src/locales/gu-IN.json
@@ -35,5 +35,7 @@
 	"joined": "{name} વાર્તાલાપમાં જોડાયા.",
 	"leaved": "{name} એ વાતચીત છોડી દીધી.",
 	"translate": "અનુવાદ કરો",
-	"chat": "ચેટ"
+	"chat": "ચેટ",
+	"room": "કક્ષ",
+	"new_room": "નવી કક્ષ"
 }
