--- a/src/locales/he-IL.json
+++ b/src/locales/he-IL.json
@@ -35,5 +35,7 @@
 	"joined": "{name} הצטרף לשיחה.",
 	"leaved": "{name} עזב את השיחה.",
 	"translate": "תרגם",
-	"chat": "צ'אט"
+	"chat": "צ'אט",
+	"room": "חדר חדש",
+	"new_room": "חדר"
 }
