--- a/src/locales/hi-IN.json
+++ b/src/locales/hi-IN.json
@@ -35,5 +35,7 @@
 	"joined": "{name} वार्तालाप में शामिल हुए।",
 	"leaved": "{name} वार्तालाप छोड़ गए।",
 	"translate": "अनुवाद करें",
-	"chat": "चैट"
+	"chat": "चैट",
+	"room": "कमरा",
+	"new_room": "नया कमरा"
 }
