--- a/src/locales/it-IT.json
+++ b/src/locales/it-IT.json
@@ -35,5 +35,7 @@
 	"joined": "{name} si è unito alla conversazione.",
 	"leaved": "{name} ha lasciato la conversazione.",
 	"translate": "Traduci",
-	"chat": "Chat"
+	"chat": "Chat",
+	"room": "Stanza",
+	"new_room": "Nuova stanza"
 }
