--- a/src/locales/ja-JP.json
+++ b/src/locales/ja-JP.json
@@ -35,5 +35,7 @@
 	"joined": "{name} さんが会話に参加しました。",
 	"leaved": "{name} さんが会話から退出しました。",
 	"translate": "翻訳する",
-	"chat": "チャット"
+	"chat": "チャット",
+	"room": "ルーム",
+	"new_room": "新規ルーム"
 }
