--- a/src/locales/km-KH.json
+++ b/src/locales/km-KH.json
@@ -35,5 +35,7 @@
 	"joined": "{name} បានចូលរួមក្នុងការពិភាក្សា។",
 	"leaved": "{name} បានចាកចេញពីការពិភាក្សា។",
 	"translate": "បកប្រែ",
-	"chat": "ជជែក​កម្ម"
+	"chat": "ជជែក​កម្ម",
+	"room": "បន្ទប់",
+	"new_room": "បន្ទប់ថ្មី"
 }
