--- a/src/locales/kn-IN.json
+++ b/src/locales/kn-IN.json
@@ -35,5 +35,7 @@
 	"joined": "{name} ಸಂಭಾಷಣೆಗೆ ಸೇರಿದ್ದಾರೆ.",
 	"leaved": "{name} ಅವರು ಸಂಭಾಷಣೆಯನ್ನು ತೊರೆದಿದ್ದಾರೆ.",
 	"translate": "ಅನುವಾದಿಸಿ",
-	"chat": "ಸಂಭಾಷಣೆ"
+	"chat": "ಸಂಭಾಷಣೆ",
+	"room": "ಕೊಠಡಿ",
+	"new_room": "ಹೊಸ ಕೊಠಡಿ"
 }
