--- a/src/locales/ml-IN.json
+++ b/src/locales/ml-IN.json
@@ -35,5 +35,7 @@
 	"joined": "{name} സംഭാഷണത്തിൽ ചേർന്നു.",
 	"leaved": "{name} സംഭാഷണം വിട്ടു.",
 	"translate": "പരിഭാഷ ചെയ്യുക",
-	"chat": "സംസാരം"
+	"chat": "സംസാരം",
+	"room": "റൂം",
+	"new_room": "പുതിയ റൂം"
 }
