--- a/src/locales/mr-IN.json
+++ b/src/locales/mr-IN.json
@@ -35,5 +35,7 @@
 	"joined": "{name} संभाषणात सामील झाले.",
 	"leaved": "{name} ने संभाषण सोडले.",
 	"translate": "भाषांतर करा",
-	"chat": "चॅट"
+	"chat": "चॅट",
+	"room": "कक्ष",
+	"new_room": "नवीन कक्ष"
 }
