--- a/src/locales/ru-RU.json
+++ b/src/locales/ru-RU.json
@@ -35,5 +35,7 @@
 	"joined": "{name} присоединился к разговору.",
 	"leaved": "{name} покинул разговор.",
 	"translate": "Перевести",
-	"chat": "Чат"
+	"chat": "Чат",
+	"room": "Комната",
+	"new_room": "Новая комната"
 }
