--- a/src/locales/ta-IN.json
+++ b/src/locales/ta-IN.json
@@ -35,5 +35,7 @@
 	"joined": "{name} உரையாடலில் சேர்ந்தார்.",
 	"leaved": "{name} உரையாடலை விட்டு வெளியேறினார்.",
 	"translate": "மொழிபெயர்",
-	"chat": "உரையாடல்"
+	"chat": "உரையாடல்",
+	"room": "அறை",
+	"new_room": "புதிய அறை"
 }
