--- a/src/locales/uk-UA.json
+++ b/src/locales/uk-UA.json
@@ -35,5 +35,7 @@
 	"joined": "{name} приєднався до бесіди.",
 	"leaved": "{name} залишив бесіду.",
 	"translate": "Перекласти",
-	"chat": "Чат"
+	"chat": "Чат",
+	"room": "Кімната",
+	"new_room": "Нова кімната"
 }
