--- a/src/locales/de-DE.json
+++ b/src/locales/de-DE.json
@@ -35,5 +35,7 @@
 	"joined": "{name} ist der Unterhaltung beigetreten.",
 	"leaved": "{name} hat die Unterhaltung verlassen.",
 	"translate": "Übersetzen",
-	"chat": "Chat"
+	"chat": "Chat",
+	"room": "Raum",
+	"new_room": "Neuer Raum"
 }
