--- a/src/locales/es-US.json
+++ b/src/locales/es-US.json
@@ -35,5 +35,7 @@
 	"joined": "{name} se unió a la conversación.",
 	"leaved": "{name} abandonó la conversación.",
 	"translate": "Traducir",
-	"chat": "Chat"
+	"chat": "Chat",
+	"room": "Habitación",
+	"new_room": "Habitación nueva"
 }
