--- a/src/locales/pa-IN.json
+++ b/src/locales/pa-IN.json
@@ -35,5 +35,7 @@
 	"joined": "{name} ਗੱਲਬਾਤ ਵਿੱਚ ਸ਼ਾਮਲ ਹੋਇਆ।",
 	"leaved": "{name} ਨੇ ਗੱਲਬਾਤ ਛੱਡ ਦਿੱਤੀ।",
 	"translate": "ਅਨੁਵਾਦ ਕਰੋ",
-	"chat": "ਚੈੱਟ"
+	"chat": "ਚੈੱਟ",
+	"room": "ਕਮਰਾ",
+	"new_room": "ਨਵਾਂ ਕਮਰਾ"
 }
