--- a/src/locales/pt-PT.json
+++ b/src/locales/pt-PT.json
@@ -35,5 +35,7 @@
 	"joined": "{name} entrou na conversa.",
 	"leaved": "{name} saiu da conversa.",
 	"translate": "Traduzir",
-	"chat": "Conversa"
+	"chat": "Conversa",
+	"room": "Quarto",
+	"new_room": "Novo quarto"
 }
