--- a/src/locales/ro-RO.json
+++ b/src/locales/ro-RO.json
@@ -35,5 +35,7 @@
 	"joined": "{name} s-a alăturat conversației.",
 	"leaved": "{name} a părăsit conversația.",
 	"translate": "Traduce",
-	"chat": "Chat"
+	"chat": "Chat",
+	"room": "Cameră",
+	"new_room": "Cameră nouă"
 }
