--- a/src/locales/sr-RS.json
+++ b/src/locales/sr-RS.json
@@ -35,5 +35,7 @@
 	"joined": "{name} се придружио разговору.",
 	"leaved": "{name} је напустио разговор.",
 	"translate": "Преведи",
-	"chat": "Чет"
+	"chat": "Чет",
+	"room": "Соба",
+	"new_room": "Нова соба"
 }
