--- a/src/locales/te-IN.json
+++ b/src/locales/te-IN.json
@@ -35,5 +35,7 @@
 	"joined": "{name} సంభాషణలో చేరారు.",
 	"leaved": "{name} సంభాషణ నుండి నిష్క్రమించారు.",
 	"translate": "అనువదించు",
-	"chat": "చాట్"
+	"chat": "చాట్",
+	"room": "గది",
+	"new_room": "కొత్త గది"
 }
