--- a/src/locales/th-TH.json
+++ b/src/locales/th-TH.json
@@ -35,5 +35,7 @@
 	"joined": "{name} เข้าร่วมในการสนทนา",
 	"leaved": "{name} ออกจากการสนทนา",
 	"translate": "แปล",
-	"chat": "แชท"
+	"chat": "แชท",
+	"room": "ห้อง",
+	"new_room": "ห้องใหม่"
 }
