--- a/docs/60-server/10-pm2.md
+++ b/docs/60-server/10-pm2.md
@@ -66,7 +66,8 @@ module.exports = {
 			interpreterArgs: '--loader tsx',
 			instances: '-1',
 			exec_mode: 'cluster',
-			watch: true,
+			watch: false,
+			ignore_watch: ['logs'],
 			env: {
 				PORT: 3002,
 			},
