Improve the Lighthouse score #1094 SEO

--- a/docs/60-server/20-pm2.md
+++ b/docs/60-server/20-pm2.md
@@ -1,5 +1,6 @@
 ---
 title: PM2
+description: PM2 is a daemon process manager that will help you manage and keep your application online 24/7.
 ---
 
 [PM2](https://pm2.keymetrics.io/) is a daemon process manager that will help you manage and keep your application online 24/7.
