Add locale for profile screen #1054

--- a/src/locales/ar-XA.json
+++ b/src/locales/ar-XA.json
@@ -37,5 +37,7 @@
 	"translate": "ترجمة",
 	"chat": "دردشة",
 	"room": "غرفة جديدة",
-	"new_room": "الغرفة"
+	"new_room": "الغرفة",
+	"profile": "حساب تعريفي",
+	"change_icon": "تغيير الايقونة"
 }
