--- a/src/locales/bg-BG.json
+++ b/src/locales/bg-BG.json
@@ -37,5 +37,7 @@
 	"translate": "Преведи",
 	"chat": "Чат",
 	"room": "Стая",
-	"new_room": "Нова стая"
+	"new_room": "Нова стая",
+	"profile": "Профил",
+	"change_icon": "Промяна на иконата"
 }
