--- a/src/locales/el-GR.json
+++ b/src/locales/el-GR.json
@@ -37,5 +37,7 @@
 	"translate": "Μετάφραση",
 	"chat": "Συνομιλία",
 	"room": "Δωμάτιο",
-	"new_room": "Νέο δωμάτιο"
+	"new_room": "Νέο δωμάτιο",
+	"profile": "Προφίλ",
+	"change_icon": "Αλλαγή εικονιδίου"
 }
