--- a/src/locales/eu-ES.json
+++ b/src/locales/eu-ES.json
@@ -37,5 +37,7 @@
 	"translate": "Itzuli",
 	"chat": "Txat",
 	"room": "Gela",
-	"new_room": "Gela berria"
+	"new_room": "Gela berria",
+	"profile": "Profila",
+	"change_icon": "Aldatu ikonoa"
 }
