--- a/src/locales/fi-FI.json
+++ b/src/locales/fi-FI.json
@@ -37,5 +37,7 @@
 	"translate": "Kääntää",
 	"chat": "Keskustelu",
 	"room": "Huone",
-	"new_room": "Uusi huone"
+	"new_room": "Uusi huone",
+	"profile": "Profiili",
+	"change_icon": "Vaihda kuvake"
 }
