--- a/src/locales/gu-IN.json
+++ b/src/locales/gu-IN.json
@@ -37,5 +37,7 @@
 	"translate": "અનુવાદ કરો",
 	"chat": "ચેટ",
 	"room": "કક્ષ",
-	"new_room": "નવી કક્ષ"
+	"new_room": "નવી કક્ષ",
+	"profile": "પ્રોફાઇલ",
+	"change_icon": "આયકન બદલો"
 }
