--- a/src/locales/he-IL.json
+++ b/src/locales/he-IL.json
@@ -37,5 +37,7 @@
 	"translate": "תרגם",
 	"chat": "צ'אט",
 	"room": "חדר חדש",
-	"new_room": "חדר"
+	"new_room": "חדר",
+	"profile": "פּרוֹפִיל",
+	"change_icon": "שנה סמל"
 }
