--- a/src/locales/hu-HU.json
+++ b/src/locales/hu-HU.json
@@ -37,5 +37,7 @@
 	"translate": "Fordítás",
 	"chat": "Csevegés",
 	"room": "Szoba",
-	"new_room": "Új szoba"
+	"new_room": "Új szoba",
+	"profile": "Profil",
+	"change_icon": "Ikon módosítása"
 }
