--- a/src/locales/id-ID.json
+++ b/src/locales/id-ID.json
@@ -37,5 +37,7 @@
 	"translate": "Terjemahkan",
 	"chat": "Obrolan",
 	"room": "Ruangan",
-	"new_room": "Ruangan baru"
+	"new_room": "Ruangan baru",
+	"profile": "Profil",
+	"change_icon": "Ubah ikon"
 }
