--- a/src/locales/km-KH.json
+++ b/src/locales/km-KH.json
@@ -37,5 +37,7 @@
 	"translate": "បកប្រែ",
 	"chat": "ជជែក​កម្ម",
 	"room": "បន្ទប់",
-	"new_room": "បន្ទប់ថ្មី"
+	"new_room": "បន្ទប់ថ្មី",
+	"profile": "ប្រវត្តិរូប",
+	"change_icon": "ផ្លាស់ប្តូររូបតំណាង"
 }
