--- a/src/locales/kn-IN.json
+++ b/src/locales/kn-IN.json
@@ -37,5 +37,7 @@
 	"translate": "ಅನುವಾದಿಸಿ",
 	"chat": "ಸಂಭಾಷಣೆ",
 	"room": "ಕೊಠಡಿ",
-	"new_room": "ಹೊಸ ಕೊಠಡಿ"
+	"new_room": "ಹೊಸ ಕೊಠಡಿ",
+	"profile": "ಪ್ರೊಫೈಲ್",
+	"change_icon": "ಐಕಾನ್ ಬದಲಾಯಿಸಿ"
 }
