--- a/src/locales/lt-LT.json
+++ b/src/locales/lt-LT.json
@@ -37,5 +37,7 @@
 	"translate": "Versti",
 	"chat": "Pokalbis",
 	"room": "Kambarys",
-	"new_room": "Naujas kambarys"
+	"new_room": "Naujas kambarys",
+	"profile": "Profilis",
+	"change_icon": "Keisti piktogramą"
 }
