--- a/src/locales/pl-PL.json
+++ b/src/locales/pl-PL.json
@@ -37,5 +37,7 @@
 	"translate": "Tłumaczyć",
 	"chat": "Czat",
 	"room": "Pokój",
-	"new_room": "Nowy pokój"
+	"new_room": "Nowy pokój",
+	"profile": "Profil",
+	"change_icon": "Zmień ikonę"
 }
