--- a/src/locales/ro-RO.json
+++ b/src/locales/ro-RO.json
@@ -37,5 +37,7 @@
 	"translate": "Traduce",
 	"chat": "Chat",
 	"room": "Cameră",
-	"new_room": "Cameră nouă"
+	"new_room": "Cameră nouă",
+	"profile": "Profil",
+	"change_icon": "Schimbă iconița"
 }
