--- a/src/locales/ru-RU.json
+++ b/src/locales/ru-RU.json
@@ -37,5 +37,7 @@
 	"translate": "Перевести",
 	"chat": "Чат",
 	"room": "Комната",
-	"new_room": "Новая комната"
+	"new_room": "Новая комната",
+	"profile": "Профиль",
+	"change_icon": "Изменить значок"
 }
