--- a/src/locales/te-IN.json
+++ b/src/locales/te-IN.json
@@ -37,5 +37,7 @@
 	"translate": "అనువదించు",
 	"chat": "చాట్",
 	"room": "గది",
-	"new_room": "కొత్త గది"
+	"new_room": "కొత్త గది",
+	"profile": "ప్రొఫైల్",
+	"change_icon": "చిహ్నాన్ని మార్చండి"
 }
