--- a/src/locales/tr-TR.json
+++ b/src/locales/tr-TR.json
@@ -37,5 +37,7 @@
 	"translate": "Çevir",
 	"chat": "Sohbet",
 	"room": "Oda",
-	"new_room": "Yeni oda"
+	"new_room": "Yeni oda",
+	"profile": "Profil",
+	"change_icon": "Simgeyi değiştir"
 }
