--- a/src/locales/uk-UA.json
+++ b/src/locales/uk-UA.json
@@ -37,5 +37,7 @@
 	"translate": "Перекласти",
 	"chat": "Чат",
 	"room": "Кімната",
-	"new_room": "Нова кімната"
+	"new_room": "Нова кімната",
+	"profile": "Профіль",
+	"change_icon": "Змінити значок"
 }
