--- a/src/locales/vi-VN.json
+++ b/src/locales/vi-VN.json
@@ -37,5 +37,7 @@
 	"translate": "Dịch",
 	"chat": "Trò chuyện",
 	"room": "Phòng",
-	"new_room": "Phòng mới"
+	"new_room": "Phòng mới",
+	"profile": "Hồ sơ",
+	"change_icon": "Thay đổi biểu tượng"
 }
