--- a/src/locales/yue-HK.json
+++ b/src/locales/yue-HK.json
@@ -37,5 +37,7 @@
 	"translate": "翻譯",
 	"chat": "傾偈",
 	"room": "房間",
-	"new_room": "新房間"
+	"new_room": "新房間",
+	"profile": "輪廓",
+	"change_icon": "更改圖標"
 }
