--- a/src/locales/cmn-CN.json
+++ b/src/locales/cmn-CN.json
@@ -37,5 +37,7 @@
 	"translate": "翻译",
 	"chat": "聊天",
 	"room": "房间",
-	"new_room": "新的房间"
+	"new_room": "新的房间",
+	"profile": "轮廓",
+	"change_icon": "更改图标"
 }
