--- a/src/locales/cs-CZ.json
+++ b/src/locales/cs-CZ.json
@@ -37,5 +37,7 @@
 	"translate": "Přeložit",
 	"chat": "Chat",
 	"room": "Místnost",
-	"new_room": "Nová místnost"
+	"new_room": "Nová místnost",
+	"profile": "Profil",
+	"change_icon": "Změnit ikonu"
 }
