--- a/src/locales/da-DK.json
+++ b/src/locales/da-DK.json
@@ -37,5 +37,7 @@
 	"translate": "Oversæt",
 	"chat": "Chat",
 	"room": "Rum",
-	"new_room": "Nyt rum"
+	"new_room": "Nyt rum",
+	"profile": "Profil",
+	"change_icon": "Skift ikon"
 }
