--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -37,5 +37,7 @@
 	"translate": "Traducir",
 	"chat": "Chat",
 	"room": "Habitación",
-	"new_room": "Nueva habitación"
+	"new_room": "Nueva habitación",
+	"profile": "Perfil",
+	"change_icon": "Cambiar el ícono"
 }
