--- a/src/locales/is-IS.json
+++ b/src/locales/is-IS.json
@@ -37,5 +37,7 @@
 	"translate": "Þýða",
 	"chat": "Spjall",
 	"room": "Herbergi",
-	"new_room": "Ný herbergi"
+	"new_room": "Ný herbergi",
+	"profile": "Prófíll",
+	"change_icon": "Breyta tákni"
 }
