--- a/src/locales/ml-IN.json
+++ b/src/locales/ml-IN.json
@@ -37,5 +37,7 @@
 	"translate": "പരിഭാഷ ചെയ്യുക",
 	"chat": "സംസാരം",
 	"room": "റൂം",
-	"new_room": "പുതിയ റൂം"
+	"new_room": "പുതിയ റൂം",
+	"profile": "പ്രൊഫൈൽ",
+	"change_icon": "ഐക്കൺ മാറ്റുക"
 }
