--- a/src/locales/mr-IN.json
+++ b/src/locales/mr-IN.json
@@ -37,5 +37,7 @@
 	"translate": "भाषांतर करा",
 	"chat": "चॅट",
 	"room": "कक्ष",
-	"new_room": "नवीन कक्ष"
+	"new_room": "नवीन कक्ष",
+	"profile": "प्रोफाइल",
+	"change_icon": "चिन्ह बदला"
 }
