--- a/src/locales/nl-NL.json
+++ b/src/locales/nl-NL.json
@@ -37,5 +37,7 @@
 	"translate": "Vertalen",
 	"chat": "Chat",
 	"room": "Kamer",
-	"new_room": "Nieuwe kamer"
+	"new_room": "Nieuwe kamer",
+	"profile": "Profiel",
+	"change_icon": "Verander icoon"
 }
