--- a/src/locales/pt-BR.json
+++ b/src/locales/pt-BR.json
@@ -37,5 +37,7 @@
 	"translate": "Traduzir",
 	"chat": "Bate-papo",
 	"room": "Quarto",
-	"new_room": "Novo quarto"
+	"new_room": "Novo quarto",
+	"profile": "Perfil",
+	"change_icon": "Alterar ícone"
 }
