--- a/src/locales/th-TH.json
+++ b/src/locales/th-TH.json
@@ -37,5 +37,7 @@
 	"translate": "แปล",
 	"chat": "แชท",
 	"room": "ห้อง",
-	"new_room": "ห้องใหม่"
+	"new_room": "ห้องใหม่",
+	"profile": "ประวัติโดยย่อ",
+	"change_icon": "เปลี่ยนไอคอน"
 }
